// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for createdInLast month 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "issues.facet.createdAt.last_month",
      ]
    }
  />
  <div>
    <div
      className="search-navigator-date-facet-selection"
    >
      <DateRangeInput
        alignEndDateCalandarRight={true}
        onChange={[Function]}
        value={
          {
            "from": undefined,
            "to": undefined,
          }
        }
      />
    </div>
    <div
      className="spacer-top issues-predefined-periods"
    >
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.all"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.all"
        value=""
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_week"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_week"
        value="1w"
      />
      <FacetItem
        active={true}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_month"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_month"
        value="1m"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_year"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_year"
        value="1y"
      />
    </div>
  </div>
</FacetBox>
`;

exports[`should render correctly for createdInLast week 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "issues.facet.createdAt.last_week",
      ]
    }
  />
  <div>
    <div
      className="search-navigator-date-facet-selection"
    >
      <DateRangeInput
        alignEndDateCalandarRight={true}
        onChange={[Function]}
        value={
          {
            "from": undefined,
            "to": undefined,
          }
        }
      />
    </div>
    <div
      className="spacer-top issues-predefined-periods"
    >
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.all"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.all"
        value=""
      />
      <FacetItem
        active={true}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_week"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_week"
        value="1w"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_month"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_month"
        value="1m"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_year"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_year"
        value="1y"
      />
    </div>
  </div>
</FacetBox>
`;

exports[`should render correctly for createdInLast year 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "issues.facet.createdAt.last_year",
      ]
    }
  />
  <div>
    <div
      className="search-navigator-date-facet-selection"
    >
      <DateRangeInput
        alignEndDateCalandarRight={true}
        onChange={[Function]}
        value={
          {
            "from": undefined,
            "to": undefined,
          }
        }
      />
    </div>
    <div
      className="spacer-top issues-predefined-periods"
    >
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.all"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.all"
        value=""
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_week"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_week"
        value="1w"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_month"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_month"
        value="1m"
      />
      <FacetItem
        active={true}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_year"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_year"
        value="1y"
      />
    </div>
  </div>
</FacetBox>
`;

exports[`should render correctly: clear 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <div>
    <div
      className="search-navigator-date-facet-selection"
    >
      <DateRangeInput
        alignEndDateCalandarRight={true}
        onChange={[Function]}
        value={
          {
            "from": undefined,
            "to": undefined,
          }
        }
      />
    </div>
    <div
      className="spacer-top issues-predefined-periods"
    >
      <FacetItem
        active={true}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.all"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.all"
        value=""
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_week"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_week"
        value="1w"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_month"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_month"
        value="1m"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_year"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_year"
        value="1y"
      />
    </div>
  </div>
</FacetBox>
`;

exports[`should render correctly: closed 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={false}
    values={[]}
  />
</FacetBox>
`;

exports[`should render correctly: created after 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "formatted.Invalid Date",
      ]
    }
  />
  <div
    className="search-navigator-facet-container"
  >
    <strong>
      after
       
    </strong>
    <DateTimeFormatter
      date={Date { NaN }}
    />
  </div>
</FacetBox>
`;

exports[`should render correctly: created after timestamp 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "formatted.Invalid Date",
      ]
    }
  />
  <div
    className="search-navigator-facet-container"
  >
    <strong>
      after
       
    </strong>
    <DateTimeFormatter
      date={Date { NaN }}
    />
  </div>
</FacetBox>
`;

exports[`should render correctly: created at 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "formatted.2019.05.21T13:33:00Z",
      ]
    }
  />
  <div
    className="search-navigator-facet-container"
  >
    <DateTimeFormatter
      date="2019.05.21T13:33:00Z"
    />
    <br />
    <span
      className="note"
    >
      <DateFromNow
        date="2019.05.21T13:33:00Z"
      />
    </span>
  </div>
</FacetBox>
`;

exports[`should render correctly: portfolio 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <div>
    <div
      className="search-navigator-date-facet-selection"
    >
      <DateRangeInput
        alignEndDateCalandarRight={true}
        onChange={[Function]}
        value={
          {
            "from": undefined,
            "to": undefined,
          }
        }
      />
    </div>
    <div
      className="spacer-top issues-predefined-periods"
    >
      <FacetItem
        active={true}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.all"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.all"
        value=""
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_week"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_week"
        value="1w"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_month"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_month"
        value="1m"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_year"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_year"
        value="1y"
      />
    </div>
  </div>
</FacetBox>
`;

exports[`should render correctly: project 1`] = `
<FacetBox
  property="createdAt"
>
  <FacetHeader
    fetching={false}
    name="issues.facet.createdAt"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <div>
    <div
      className="search-navigator-date-facet-selection"
    >
      <DateRangeInput
        alignEndDateCalandarRight={true}
        onChange={[Function]}
        value={
          {
            "from": undefined,
            "to": undefined,
          }
        }
      />
    </div>
    <div
      className="spacer-top issues-predefined-periods"
    >
      <FacetItem
        active={true}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.all"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.all"
        value=""
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_week"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_week"
        value="1w"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_month"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_month"
        value="1m"
      />
      <FacetItem
        active={false}
        halfWidth={false}
        loading={false}
        name="issues.facet.createdAt.last_year"
        onClick={[Function]}
        tooltip="issues.facet.createdAt.last_year"
        value="1y"
      />
    </div>
  </div>
</FacetBox>
`;
